apps/base/harbor/harbor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-signin: https://auth.christensencloud.us?rm=$request_method
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local:9091/api/authz/auth-request
    nginx.ingress.kubernetes.io/custom-http-errors: 400,401,403,404,405,407,408,409,410,411,412,413,418,429,500,502,503,504,505
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: harbor-portal
  namespace: harbor
spec:
  ingressClassName: nginx-public
  rules:
  - host: harbor.christensencloud.us
    http:
      paths:
      - backend:
          service:
            name: harbor-portal
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - harbor.christensencloud.us
    secretName: harbor-christensencloud.us-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: harbor-core
  namespace: harbor
spec:
  ingressClassName: nginx-public
  rules:
  - host: harbor.christensencloud.us
    http:
      paths:
      - backend:
          service:
            name: harbor-core
            port:
              number: 80
        path: /api/
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              number: 80
        path: /service/
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              number: 80
        path: /v2/
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              number: 80
        path: /chartrepo/
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              number: 80
        path: /c/
        pathType: Prefix
  tls:
  - hosts:
    - harbor.christensencloud.us
    secretName: harbor-christensencloud.us-tls
